[workspace]
[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "3.0.0"
sp1-derive = "3.0.0"
sha2 = { version = "0.10.8", default-features = false }

//comment for using program without precompile
[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }